clasp 3.2.2:
  * fixed: invalid logged lemmas due to buggy minimization in Solver::resolveToFlagged()
  * fixed: LogicProgram::dispose() must reset pointers
  * fixed compilation problems on Cygwin
  
clasp 3.2.1: Thursday, 13th October 2016
  * added support for adding variables from theory propagator
  * fixed output of "--pre" wrt to externals in incremental setting
  * fixed regression in projective enumeration in incremental setting
  * fixed regression in handling of minimize statements containing only zero-weighted literals
  * fixed possible invalid access to empty input vector in ClaspAppBase::run()
  * added workaround to fix emcc code-gen bug
  * fixed type mismatch and warnings when compiled with x64 and _DEBUG
  * fixed compilation problems on MacOS and ARM

clasp 3.2.0: Thursday, 8th September 2016
  * added experimental support for new asp format and changed "--pre" option to use it
  * added propagator for acyclicity constraint (#edge-directive)
  * added option "--parse-ext" for enabling input extentions:
    - acyc constraints in smodels, dimacs, and opb format,
    - objective function in dimacs format,
    - projection, assumption, output, heuristic directives in dimacs and opb format
  * added stratification heuristic for weights in core-guided optimization enabled via
    "--opt-strategy=usc,{8-15}"
  * added support for parallel solving via C++11 threads instead of Intel TBB (see README)
  * added ClaspFacade::startSolve() for synchronous (possibly single-threaded) model generation
  * added option "--vsids-acids" for enabling average conflict-index decision scoring in vsids
  * added option "--vsids-progress" for enabling Glucose-style decreasing decay scheme
  * added option "--block-restarts" for enabling Glucose-style blocking of restarts
  * added option "--del-protect" for enabling Glucose-style temporary freezing of learnt nogods
  * option "--dom-mod" now also supports modifiers "factor" and "init" and also